quick-fix too much white space in the adventures of a hero
added an extra class for css grid practise h3, not the cleanest solution imo. Will have to look into that!

--- a/index.css
+++ b/index.css
@@ -502,8 +502,11 @@ header {
 
     .portfolio__page--intro {
         margin-bottom: 0;
-        flex-basis: 65vw;
         padding-right: 1em;
+    }
+
+    .portfolio__page--intro-with-img {
+        flex-basis: 65vw;
     }
 
     .portfolio__page--image {
